2008-02-10  Bastien Nocera  <hadess@hadess.net>

	Patch from Zaheer Abbas Merali <zaheermerali@gmail.com>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_get_channels_file),
	(bacon_video_widget_can_play),
	(bacon_video_widget_dvb_get_adapter_type),
	(bacon_video_widget_get_mrls):
	Add support for listing DVB channels from the channels.conf
	file, with DVB type-specific filtering

	* src/totem-menu.c: (on_play_dvb_activate),
	(update_drives_menu_items), (update_dvb_menu_items),
	(on_movie_menu_select): Add DVB cards to the Movie menu

2008-02-10  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c: (xine_event):
	Really fix compile failure, spotted by Jens Granseuer
	<jensgr@gmx.net> (Closes: #514391)

2008-02-09  Philip Withnall  <pwithnall@svn.gnome.org>

	* src/totem.c: (totem_action_load_media),
	(totem_action_toggle_aspect_ratio): Fix some compile warnings.

2008-02-09  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c:
	(totem_embedded_set_logo_by_name):
	Avoid warnings when hidden

2008-02-08  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_load_media):
	Fix message when trying to play DVB and plugins are missing

2008-02-08  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_can_play):
	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_can_play):
	* src/backend/bacon-video-widget.h:
	Change the API to give a more detailed information as to why it
	can't play a specific media

	* src/totem.c: (totem_action_load_media):
	Better error message depending on the retval of _can_play()

2008-02-08  Bastien Nocera  <hadess@hadess.net>

	* data/totem.ui:
	* src/totem.c: (totem_action_toggle_aspect_ratio):
	Fix to make totem_action_toggle_aspect_ratio() work again

2008-02-08  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: (totem_action_handle_scroll):
	Don't assert when doing a mouse scroll in windowed mode