@@ -1,5 +1,11 @@
 2008-02-10  Bastien Nocera  <hadess@hadess.net>
 
+	* src/totem-menu.c: (update_dvb_menu_items):
+	Better menu item label for the DVB items, don't translate
+	strings we don't need to (Closes: #515593)
+
+2008-02-10  Bastien Nocera  <hadess@hadess.net>
+
 	Patch from Zaheer Abbas Merali <zaheermerali@gmail.com>
 
 	* src/backend/bacon-video-widget-gst-0.10.c:
